refactor: 필요한 index info 부분 수정